# BotHarbor

./: .gitignore  README.md  botharbor.spec  build.bat  context.md  generate_icons.py  hamal.spec  installer.iss  pylint_output.txt  pyproject.toml  requirements.txt  run.bat
src/: launch_log.txt  migrate_db.py
src/botharbor/: __init__.py  __main__.py  main.py
src/botharbor/core/: __init__.py  config.py  log_handler.py  process_manager.py
src/botharbor/database/: __init__.py  crud.py  database.py  models.py
src/botharbor/ui/: __init__.py  add_project_dialog.py  crash_dialog.py  dashboard.py  dialogs.py  edit_project_dialog.py  icons.py  log_panel.py  log_viewer.py  main_window.py  styles.qss
src/botharbor/utils/: __init__.py  helpers.py
src/hamal/: __init__.py  __main__.py  main.py
src/hamal/core/: __init__.py  config.py  log_handler.py  process_manager.py  project_scanner.py
src/hamal/database/: __init__.py  crud.py  database.py  models.py
src/hamal/ui/: __init__.py  about_dialog.py  add_project_dialog.py  animated_button.py  crash_dialog.py  dashboard.py  dialogs.py  edit_project_dialog.py  icons.py  log_panel.py  log_viewer.py  main_window.py  styles.qss  widgets.py
src/hamal/utils/: __init__.py  helpers.py
