[project]
name = "hamal"
version = "0.1.0"
description = "H.A.M.A.L: Command Center for Python Processes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "HAMAL Team"}
]
keywords = ["telegram", "bot", "manager", "desktop", "process", "hamal"]

dependencies = [
    "customtkinter>=5.2.0",
    "SQLAlchemy>=2.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
